2012-10-09
	fix freeze in use skill call from item
	add lib.usermaps, lib.obj.usermap, pc.usermap_obj
	add script.lock_move, script.unlock_move
	limited support set/unset flygarden rope (only rope)
	DATABASE_FORMAT_VERSION 1.1.2: set item.skill_id, item.skill_id_add

2012-10-05
	add kuji category script
	add script.npcshop_list(pc, shop_item_list)
	add common pet pict switch script
	skip load file under script/ filename startswith __
	fix packet 09e9 send wrong pict id

2012-10-04
	add nekomata heart switch script
	add pc.item_event_id
	DATABASE_FORMAT_VERSION 1.1.1:
	petid->pet_id, eventid->event_id

2012-09-27
	add item, warehouse stock limit
	log file use utf-8 not system encoding
	move general.secure* to lib.security
	fix ctrl+c exit error on windows

2012-09-26:
	add script/site_packages
	import warp point script from yutori server
	move lib.env to lib._env (_env store default values)
	allow user replace their own lib/env.py each update
	move settings from server.ini to lib.env
	remove lib/obj/serverconfig.py, lib.server.config
	add script/loginevent.py (send after login if set env.SEND_LOGIN_EVENT)
	add npctrade id
	fix skill use error when x or y > 127

2012-09-25
	remove unnecessary lock from lib.server

2012-09-24
	add pet thread

2012-09-23
	let pet motion refer master (sit and stand)
	replace thread.start_new_thread to threading.Thread

2012-09-21
	support set and save pet_pict_id and pet_weapon_id
	fix script.wing set wrong attribute problem
	modify some enc parameter

2012-09-20
	update db to 346
	make pet heart visible
	save item data with dumpobj
	add lib.env.USERDATA_FORMAT_VERSION
	add lib.obj.pc_data_lib to load mutil-version pc data
	add lib.users.upgrade_user_data

2012-09-17
	limited support dem parts and form change
	add command /printallequip and script.printallequip
	add command /unsetallequip and script.unsetallequip
	remove pc.dic (str:str dictionary)
	add pc.var (str:object dictionary, support save and restore standard python object)