@@ -15,16 +15,16 @@ ex = 0
 wing = 0
 wingcolor = 0
 job = 0
-map_id = 10023100
+map_id = 30030000
 lv_base = 1
 lv_job1 = 1
 lv_job2x = 1
 lv_job2t = 1
 lv_job3 = 1
 gold = 0
-x = 231.5
-y = 127.97
-dir = 4
+x = 3
+y = 4
+dir = 0
 
 [status]
 str = 8
@@ -67,7 +67,7 @@ socks = 0
 pet = 0
 
 [sort]
-item = 3,2,5,4,1
+item = 3,2,5,1,4
 warehouse = 
 
 [item]
